--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,21 @@ h1 {
   height: 30%;
 }
 
-.bottom {
+.cards-container {
   border: 1px solid black;
   height: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.card {
+  border: 1px solid red;
+  width: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 5px;
+  background-color: red;
 }
 /*# sourceMappingURL=style.css.map */
