--- a/css/style.scss
+++ b/css/style.scss
@@ -26,7 +26,7 @@ h1 {
 .card {
     border: 1px solid red;
     width: 20%;
-    display: flex;
+    // display: flex;
     margin-right: 5px;
     background-color: red;
 }
