--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,84 @@
-h1 {
-  color: red;
-}
-
 .main-container {
-  border: 1px solid black;
-  height: 300px;
-  width: 800px;
+  height: 370px;
+  width: 1000px;
   margin: 0 auto;
   margin-top: 100px;
-}
-
-.top {
-  border: 1px solid black;
-  height: 30%;
-}
-
-.cards-container {
-  border: 1px solid black;
-  height: 70%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.card {
-  border: 1px solid red;
-  width: 20%;
+.main-container .left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main-container .right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main-container .container {
+  border: 1px solid black;
+  height: 100%;
+  width: 95%;
+  margin: 0 auto;
+}
+
+.main-container .container .top {
+  border: 1px solid black;
+  height: 20%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main-container .container .top h2 {
+  margin: 0;
+  padding-top: 5px;
+}
+
+.main-container .container .top .see {
+  padding-top: 10px;
+}
+
+.main-container .container .top a {
+  text-decoration: none;
+  color: black;
+  padding-top: 10px;
+}
+
+.main-container .container .cards-container {
+  border: 1px solid black;
+  height: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main-container .container .card {
   margin-right: 5px;
   background-color: red;
+}
+
+.main-container .container .card img {
+  width: 100%;
+  height: 155px;
+}
+
+.main-container .container .card p {
+  margin: 0;
 }
 /*# sourceMappingURL=style.css.map */
