--- a/css/style.scss
+++ b/css/style.scss
@@ -1,32 +1,71 @@
-h1 {
-    color: red;
-}
-
 .main-container {
-    border: 1px solid black;
-    height: 300px;
-    width: 800px;
+    height: 370px;
+    width: 1000px;
     margin: 0 auto;
     margin-top: 100px;
-}
-
-.top {
-    border: 1px solid black;
-    height: 30%;
-}
-
-.cards-container {
-    border: 1px solid black;
-    height: 70%;
     display: flex;
-}
 
-// ========== CARDS ==============
+    .left {
+        display: flex;
+        align-items: center;
+    }
 
-.card {
-    border: 1px solid red;
-    width: 20%;
-    // display: flex;
-    margin-right: 5px;
-    background-color: red;
+    .right {
+        display: flex;
+        align-items: center;
+    }
+
+    .container {
+        border: 1px solid black;
+        height: 100%;
+        width: 95%;
+        margin: 0 auto;
+        
+        .top {
+            border: 1px solid black;
+            height: 20%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            
+            h2 {
+                margin: 0;
+                padding-top: 5px;
+            }
+            
+            .see {
+                padding-top: 10px;
+            }
+            
+            a {
+                text-decoration: none;
+                color: black;
+                padding-top: 10px;
+            }
+        }
+        
+        .cards-container {
+            border: 1px solid black;
+            height: 80%;
+            display: flex;
+        }
+        
+        // ========== CARDS ==============
+        
+        .card {
+            // border: 1px solid red;
+            // display: flex;
+            margin-right: 5px;
+            background-color: red;
+            
+            img {
+                width: 100%;
+                height: 155px;
+            }
+            
+            p {
+                margin: 0;
+            }
+        }
+    }
 }
